--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for App-Module-Setup
 
-0.01    Date/time
+0.01    2013-06-31
         First version, released on an unsuspecting world.
 
+0.02	2013-07-01
+	First working prototype.
